Log retrospective: interactive Gradle daemon architecture + Sketchfab OAuth
Investigations.md is normally scoped to investigation-only (no-code-change)
sessions, but the amount of real research behind the interactive-Gradle-
prompting and Sketchfab-OAuth-automation work (landed as PRs #46-#48) felt
worth preserving verbatim rather than trusting it survives future memory
summarization intact. See the open follow-up task in TASKS.md to revisit
where this convention boundary should actually sit.